--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,13 @@
                 android:id="@+id/clearBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/clear"
-                android:textColor="#283593"
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
 
                 />
 
@@ -33,28 +36,41 @@
                 android:id="@+id/parenthesesBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/parentheses"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
+
 
             <Button
                 android:id="@+id/exponentBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/exponent"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/divideBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/divide"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
         </TableRow>
 
         <TableRow
@@ -65,37 +81,53 @@
                 android:id="@+id/sevenBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/seven"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/eightBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/eight"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/nineBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/nine"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/multiplyBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/multiply"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
         </TableRow>
 
         <TableRow
@@ -106,37 +138,53 @@
                 android:id="@+id/fourBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/four"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/fiveBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/five"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/sixBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/six"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/subtractBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/subtract"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
         </TableRow>
 
         <TableRow
@@ -147,37 +195,53 @@
                 android:id="@+id/oneBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/one"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/twoBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/two"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/threeBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/three"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/addBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/add"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
         </TableRow>
 
         <TableRow
@@ -188,37 +252,53 @@
                 android:id="@+id/plusMinusBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/plusMinus"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/zeroBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/zero"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/pointBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/point"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/equalsBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="1"
                 android:text="@string/equals"
-                android:textColor="#283593" />
+                android:textColor="#ffffff"
+                android:layout_margin="5dp"
+                android:background="@drawable/circle"
+                android:textSize="24sp"
+                />
         </TableRow>
     </TableLayout>
 
