--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
                 android:background="@drawable/circle"
                 android:textSize="24sp"
                 android:backgroundTint="#DD2C00"
+                app:backgroundTint="@null"
 
 
                 />
@@ -45,6 +46,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
 
@@ -59,6 +61,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -72,6 +75,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
         </TableRow>
 
@@ -90,6 +94,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -103,6 +108,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -116,6 +122,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -129,6 +136,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
         </TableRow>
 
@@ -147,6 +155,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -160,6 +169,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -173,6 +183,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -186,6 +197,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
         </TableRow>
 
@@ -204,6 +216,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -217,6 +230,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -230,6 +244,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -243,6 +258,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
         </TableRow>
 
@@ -261,6 +277,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -274,6 +291,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -287,6 +305,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/circle"
                 android:textSize="24sp"
+                app:backgroundTint="@null"
                 />
 
             <Button
@@ -301,6 +320,7 @@
                 android:background="@drawable/circle"
                 android:textSize="24sp"
                 android:backgroundTint="#43A047"
+                app:backgroundTint="@null"
                 />
         </TableRow>
     </TableLayout>
