--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,17 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:backgroundTint="#DD2C00"
+                android:onClick="clearBTN"
                 android:text="@string/clear"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                android:backgroundTint="#DD2C00"
-                app:backgroundTint="@null"
 
 
-                />
+                app:backgroundTint="@null" />
 
 
             <Button
@@ -40,14 +40,14 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="parBTN"
                 android:text="@string/parentheses"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
 
             <Button
@@ -55,28 +55,28 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="expBTN"
                 android:text="@string/exponent"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/divideBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="divideBTN"
                 android:text="@string/divide"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow
@@ -88,56 +88,56 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="sevenBTN"
                 android:text="@string/seven"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/eightBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="eightBTN"
                 android:text="@string/eight"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/nineBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="nineBTN"
                 android:text="@string/nine"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/multiplyBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="multiplyBTN"
                 android:text="@string/multiply"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow
@@ -149,56 +149,56 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="fourBTN"
                 android:text="@string/four"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/fiveBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="fiveBTN"
                 android:text="@string/five"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/sixBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="sixBTN"
                 android:text="@string/six"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/subtractBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="subtractBTN"
                 android:text="@string/subtract"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow
@@ -210,56 +210,56 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="oneBTN"
                 android:text="@string/one"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/twoBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="twoBTN"
                 android:text="@string/two"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/threeBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="threeBTN"
                 android:text="@string/three"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/addBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="addBTN"
                 android:text="@string/add"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow
@@ -271,62 +271,62 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="plusMinusBTN"
                 android:text="@string/plusMinus"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/zeroBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="zeroBTN"
                 android:text="@string/zero"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/pointBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="decimalBTN"
                 android:text="@string/point"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/equalsBTN"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:backgroundTint="#43A047"
+                android:onClick="equalBTN"
                 android:text="@string/equals"
                 android:textColor="#ffffff"
-                android:layout_margin="5dp"
-                android:background="@drawable/circle"
                 android:textSize="24sp"
-                android:backgroundTint="#43A047"
-                app:backgroundTint="@null"
-                />
+                app:backgroundTint="@null" />
         </TableRow>
     </TableLayout>
 
     <EditText
-        android:id="@+id/textView"
+        android:id="@+id/input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -343,17 +343,18 @@
 
     <ImageButton
         android:id="@+id/button21"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/backspace"
-        android:background="@drawable/circle"
-        app:srcCompat="@drawable/backspace"
         android:layout_margin="5dp"
-        style="@style/Widget.AppCompat.Button.Borderless"
+        android:background="@drawable/circle"
+        android:contentDescription="@string/backspace"
+        android:onClick="backspaceBTN"
         android:textColor="#283593"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/backspace" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
