Implemented Base enum (not calculation) and button enforcement (AKA enable/disable buttons)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:backgroundTint="#DD2C00"
                 android:onClick="clearBTN"
                 android:textAllCaps="false"
@@ -42,7 +42,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="dBTN"
                 android:text="@string/d"
                 android:textColor="#ffffff"
@@ -58,7 +58,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="eBTN"
                 android:text="@string/e"
                 android:textColor="#ffffff"
@@ -73,7 +73,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="fBTN"
                 android:text="@string/f"
                 android:textColor="#ffffff"
@@ -88,7 +88,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:contentDescription="@string/backspace"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:backgroundTint="#DD2C00"
                 android:onClick="backspaceBTN"
                 android:textColor="#ffffff"
@@ -113,7 +113,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="moduloBTN"
                 android:text="@string/modulo"
                 android:textColor="#ffffff"
@@ -127,7 +127,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="aBTN"
                 android:text="@string/a"
                 android:textColor="#ffffff"
@@ -143,7 +143,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="bBTN"
                 android:text="@string/b"
                 android:textColor="#ffffff"
@@ -158,7 +158,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="cBTN"
                 android:text="@string/c"
                 android:textColor="#ffffff"
@@ -172,7 +172,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="divideBTN"
                 android:text="@string/divide"
                 android:textColor="#ffffff"
@@ -191,7 +191,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="expBTN"
                 android:text="@string/exponent"
                 android:textColor="#ffffff"
@@ -207,7 +207,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="sevenBTN"
                 android:text="@string/seven"
                 android:textColor="#ffffff"
@@ -221,7 +221,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="eightBTN"
                 android:text="@string/eight"
                 android:textColor="#ffffff"
@@ -235,7 +235,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="nineBTN"
                 android:text="@string/nine"
                 android:textColor="#ffffff"
@@ -249,7 +249,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="multiplyBTN"
                 android:text="@string/multiply"
                 android:textColor="#ffffff"
@@ -268,7 +268,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="squareRootBTN"
                 android:text="@string/squareroot"
                 android:textColor="#ffffff"
@@ -284,7 +284,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="fourBTN"
                 android:text="@string/four"
                 android:textColor="#ffffff"
@@ -298,7 +298,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="fiveBTN"
                 android:text="@string/five"
                 android:textColor="#ffffff"
@@ -312,7 +312,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="sixBTN"
                 android:text="@string/six"
                 android:textColor="#ffffff"
@@ -326,7 +326,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="subtractBTN"
                 android:text="@string/subtract"
                 android:textColor="#ffffff"
@@ -345,7 +345,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="piBTN"
                 android:textAllCaps="false"
                 android:text="@string/pi"
@@ -362,7 +362,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="oneBTN"
                 android:text="@string/one"
                 android:textColor="#ffffff"
@@ -376,7 +376,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="twoBTN"
                 android:text="@string/two"
                 android:textColor="#ffffff"
@@ -390,7 +390,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="threeBTN"
                 android:text="@string/three"
                 android:textColor="#ffffff"
@@ -404,7 +404,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="addBTN"
                 android:text="@string/add"
                 android:textColor="#ffffff"
@@ -423,7 +423,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="parBTN"
                 android:text="@string/parentheses"
                 android:textColor="#ffffff"
@@ -439,7 +439,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="spaceBTN"
                 android:text="@string/spacebar"
                 android:textColor="#ffffff"
@@ -453,7 +453,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="zeroBTN"
                 android:text="@string/zero"
                 android:textColor="#ffffff"
@@ -467,7 +467,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:onClick="decimalBTN"
                 android:text="@string/point"
                 android:textColor="#ffffff"
@@ -481,7 +481,7 @@
                 android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
+                android:background="@drawable/buttonenabled"
                 android:backgroundTint="#43A047"
                 android:onClick="equalBTN"
                 android:text="@string/equals"
