--- a/app/src/main/res/drawable/buttonenabled.xml
+++ b/app/src/main/res/drawable/buttonenabled.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="15dp"/>
-            <solid android:color="#263238"/>
+            <solid android:color="@color/enabled"/>
         </shape>
 
     </item>
