--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="enabled">#263238</color>
-    <color name="disabled">#787F82</color>
+
+    <color name="dim_dark_blue">#263238</color>
+    <color name="dim_grey">#787F82</color>
+
+    <color name="enabled">@color/dim_dark_blue</color>
+    <color name="disabled">@color/dim_grey</color>
 </resources>
