--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,8 @@
         <item
             android:id="@+id/nav_notation"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Notation" />
+            android:title="Notation"
+            />
         <item
             android:id="@+id/nav_base"
             android:icon="@drawable/ic_menu_gallery"
