--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/historyItem"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:text="Empty Space"
-    android:onClick="enterHistoryItem"
-/>
+    android:textSize="24sp"
+    android:singleLine="true"
+    android:scrollHorizontally="true"
+    android:gravity="end"
+    android:textAlignment="gravity"/>
+<!--android:onClick="enterHistoryItem"-->
+
+
+
