--- a/app/src/main/res/layout/popup_history.xml
+++ b/app/src/main/res/layout/popup_history.xml
@@ -3,27 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="40dp"
-    android:layout_marginBottom="20dp"
-    android:layout_marginHorizontal="20dp"
     android:background="#dddddd"
     android:orientation="vertical" >
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="History"
         android:textSize="24sp"
         android:textAllCaps="true"
-        android:background="#eeeeee"/>
+        android:background="#eeeeee" />-->
 
-    <ScrollView
+    <ListView
         android:id="@+id/historyList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"
+        >
+
+        <!--<include layout="@layout/history_list" />-->
+    </ListView>
 
 </LinearLayout>
